fixed span wrapping issue

--- a/src/widgets/AsciiAnimation/AsciiAnimation.css
+++ b/src/widgets/AsciiAnimation/AsciiAnimation.css
@@ -1,17 +1,15 @@
 #flower {
   right: 0;
-  overflow: auto;
   white-space: nowrap;
   font-size: 0.75rem;
 }
 
 #flower > * {
   right: 0;
-  overflow: auto;
-  white-space: nowrap;
+  overflow: hidden;
   font-size: 0.75rem;
   font-family: var(--font-mono);
-  white-space: pre-wrap;
+  white-space: pre;
   margin: 0;
   padding: 0;
 }
